--- a/index.html
+++ b/index.html
@@ -1,419 +1,74 @@
-<!DOCTYPE html> 
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>Portal de Acessos - Grupo Areia Ana</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- BLOQUEIO DE ACESSO -->
+<div id="loginOverlay" style="
+  position:fixed;
+  inset:0;
+  background: radial-gradient(circle at top, #151821 0, #050814 45%, #02030a 100%);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+">
+  <div style="
+    background:#0b1020;
+    border:1px solid rgba(255,154,74,.35);
+    border-radius:16px;
+    padding:28px;
+    width:340px;
+    color:#fff;
+    box-shadow:0 0 40px rgba(0,0,0,.6);
+  ">
+    <h3 style="margin:0 0 8px">🔒 Acesso restrito</h3>
+    <p style="font-size:13px;opacity:.8;margin:0 0 14px">
+      Digite a senha para entrar no Portal de Acessos.
+    </p>
 
-  <style>
-    :root {
-      --bg: #050814;
-      --bg-card: #0b1020;
-      --bg-card-soft: #101629;
-      --accent: #ff7a1a;
-      --accent-soft: #ff9b4a;
-      --text: #f5f7ff;
-      --text-soft: #c2c7ff;
-    }
+    <input id="senhaPortal" type="password" placeholder="Senha"
+      style="
+        width:100%;
+        padding:12px;
+        border-radius:10px;
+        border:1px solid rgba(255,154,74,.4);
+        background:#050814;
+        color:#fff;
+        margin-bottom:10px;
+      ">
 
-    body {
-      font-family: system-ui, sans-serif;
-      background: radial-gradient(circle at top, #151821 0, #050814 45%, #02030a 100%);
-      color: var(--text);
-      margin: 0;
-      padding: 24px;
-    }
+    <button onclick="validarSenha()"
+      style="
+        width:100%;
+        padding:12px;
+        border-radius:999px;
+        border:none;
+        background:#ff7a1a;
+        font-weight:700;
+        cursor:pointer;
+      ">
+      Entrar
+    </button>
 
-    /* ===== TELA DE SENHA ===== */
-    .lock-screen {
-      position: fixed;
-      inset: 0;
-      background: radial-gradient(circle at top, #151821 0, #050814 60%, #02030a 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-
-    .lock-card {
-      width: 100%;
-      max-width: 380px;
-      background: #0b1020;
-      border-radius: 16px;
-      padding: 24px 22px 20px;
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-      border: 1px solid rgba(255, 154, 74, 0.35);
-      text-align: center;
-    }
-
-    .lock-logo {
-      width: 120px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-
-    .lock-title {
-      font-size: 18px;
-      margin: 4px 0 2px;
-    }
-
-    .lock-subtitle {
-      font-size: 12px;
-      color: var(--text-soft);
-      margin-bottom: 16px;
-    }
-
-    .lock-input {
-      width: 100%;
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 154, 74, 0.45);
-      background: #050814;
-      color: var(--text);
-      font-size: 14px;
-      outline: none;
-      box-sizing: border-box;
-    }
-
-    .lock-input:focus {
-      border-color: var(--accent-soft);
-    }
-
-    .lock-btn {
-      width: 100%;
-      margin-top: 12px;
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: none;
-      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
-      color: #050814;
-      font-weight: 600;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.15s;
-    }
-
-    .lock-btn:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 8px 18px rgba(0,0,0,0.4);
-    }
-
-    .lock-error {
-      margin-top: 8px;
-      font-size: 12px;
-      color: #ff6b81;
-      min-height: 16px;
-    }
-
-    /* ===== PORTAL ===== */
-    .container {
-      max-width: 1150px;
-      margin: auto;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .logo {
-      width: 180px;
-      margin-bottom: 10px;
-    }
-
-    h1 { font-size: 24px; margin: 10px 0 4px 0; }
-    .subtitle { font-size: 13px; color: var(--text-soft); }
-
-    /* MENU PRINCIPAL */
-    .main-menu {
-      margin: 24px 0;
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-    }
-
-    .menu-btn {
-      padding: 12px 14px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 154, 74, 0.3);
-      background: linear-gradient(135deg, rgba(255,122,26,0.12), rgba(5,8,20,0.95));
-      color: var(--text);
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: .15s;
-    }
-
-    .menu-btn.active {
-      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
-      color: #050814;
-    }
-
-    .menu-btn:hover {
-      transform: translateY(-2px);
-      border-color: var(--accent-soft);
-    }
-
-    .section { margin-bottom: 28px; }
-    .hidden { display: none; }
-
-    .section-title {
-      font-size: 18px;
-      margin-bottom: 14px;
-      color: var(--accent-soft);
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 12px;
-    }
-
-    .link-card {
-      padding: 14px;
-      background: var(--bg-card);
-      border-radius: 12px;
-      border: 1px solid rgba(255, 154, 74, 0.25);
-      text-decoration: none;
-      color: var(--text);
-      transition: .15s;
-      display: block;
-    }
-
-    .link-card:hover {
-      transform: translateY(-2px);
-      background: var(--bg-card-soft);
-      border-color: var(--accent-soft);
-    }
-
-    .link-title { font-size: 15px; font-weight: 600; }
-    .link-meta { font-size: 11px; color: var(--text-soft); }
-  </style>
-</head>
-
-<body>
-
-<!-- ===== TELA DE SENHA ===== -->
-<div id="lock-screen" class="lock-screen">
-  <div class="lock-card">
-    <img src="logo-areia-ana.png" alt="Logo Grupo Areia Ana" class="lock-logo">
-    <div class="lock-title">Acesso restrito</div>
-    <div class="lock-subtitle">Digite a senha de administrador para abrir o portal.</div>
-
-    <form id="lock-form">
-      <input id="access-password" class="lock-input" type="password" placeholder="Senha de acesso" autocomplete="off"/>
-      <button type="submit" class="lock-btn">Entrar</button>
-      <div id="lock-error" class="lock-error"></div>
-    </form>
+    <p id="erroSenha" style="color:#ff6b6b;font-size:12px;margin-top:10px;display:none">
+      Senha incorreta. Tente novamente.
+    </p>
   </div>
-</div>
-
-<!-- ===== PORTAL ===== -->
-<div class="container" id="portal" style="display:none;">
-
-  <header>
-    <img src="logo-areia-ana.png" class="logo">
-    <h1>Portal de Acessos – Grupo Areia Ana</h1>
-    <p class="subtitle">Escolha uma área e clique para abrir o painel ou sistema.</p>
-  </header>
-
-  <!-- MENU -->
-  <div class="main-menu">
-    <button class="menu-btn active" onclick="showSection('indicadores', this)">Indicadores</button>
-    <button class="menu-btn" onclick="showSection('comercial', this)">Comercial</button>
-    <button class="menu-btn" onclick="showSection('rh', this)">RH</button>
-    <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
-  </div>
-
-  <!-- ================= -->
-  <!-- 🔶 INDICADORES   -->
-  <!-- ================= -->
-  <section id="indicadores" class="section">
-    <div class="section-title">Indicadores – Power BI</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiNjM2OGI4ZmEtOTc3Zi00NjgzLWE3MDUtYzk0NDBmMDAyN2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Remessas Usina</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiM2Q3NzQ0ZDMtZjZmYy00MGJmLTg0NWYtNjU4YTlmMWUyMjUwIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Inadimplentes</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2JlMzJiZjQtMTcyZS00ZDAyLWIwZDQtYjQxMzM1ZmM4YTE0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Pedidos – Agregados</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMDlhYjhkNDktZWExNC00MTNhLTg2MDctZTYxOWIyZTNjMjM0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Gastos e Retorno BTs</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjdhNGJhYWYtOWIxMC00NzJmLWE1NTAtMmFkYmY0ZjgwYmZjIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">DRE</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiYWI2N2FlYjgtODJhNi00ODZhLThjMDgtNTZlMGYyMjk4N2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Volume de Carteira – Usina</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Custo por KM / Hora</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- ============================= -->
-  <!-- 🔶 COMERCIAL – CORRIGIDO     -->
-  <!-- ============================= -->
-  <section id="comercial" class="section hidden">
-    <div class="section-title">Comercial – ClickUp</div>
-    <div class="grid">
-
-      <!-- Lista de Oportunidades – Anderson -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista de Oportunidades – Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Lista de Oportunidades – Márcio -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
-        <div class="link-title">Lista de Oportunidades – Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteira Anderson -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteira Márcio -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteira Geral Unificada -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
-        <div class="link-title">Carteira Geral Unificada</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Metas e Roteiro Comercial -->
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
-        <div class="link-title">Metas e Roteiro Comercial</div>
-        <div class="link-meta">ClickUp Docs</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- RH -->
-  <section id="rh" class="section hidden">
-    <div class="section-title">RH</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://superportal-empregador.vr.com.br/pontomais">
-        <div class="link-title">Ponto Mais</div>
-        <div class="link-meta">Controle de Ponto</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
-        <div class="link-title">RH Gestor</div>
-        <div class="link-meta">Sistema de RH</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- SISTEMAS -->
-  <section id="sistemas" class="section hidden">
-    <div class="section-title">Sistemas Gerais</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://ctasmart.com.br:8443/login">
-        <div class="link-title">CTA Smart</div>
-        <div class="link-meta">Abastecimento</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.bubbleapps.io/version-test/pg_administrativa">
-        <div class="link-title">Bubble – Cargas</div>
-        <div class="link-meta">Sistema Interno</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://webmail-seguro.com.br/areiaana.com.br/">
-        <div class="link-title">E-mail Locaweb</div>
-        <div class="link-meta">Webmail</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana-remote.topconsuite.app:20200/pages/auth/login">
-        <div class="link-title">Topcon CRM</div>
-        <div class="link-meta">Comercial Usina</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://analytics.zoho.com/workspace/1762700000040012018">
-        <div class="link-title">Topcon BI</div>
-        <div class="link-meta">Dashboards</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.topconsuite.app/">
-        <div class="link-title">Topcon Tech</div>
-        <div class="link-meta">Tecnologia</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.rastrin.app/">
-        <div class="link-title">Topcon Fleet</div>
-        <div class="link-meta">Rastreadores</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://anaareiasportais.cigam.cloud/">
-        <div class="link-title">Portais CIGAM</div>
-        <div class="link-meta">ERP CIGAM</div>
-      </a>
-
-    </div>
-  </section>
-
 </div>
 
 <script>
-  /* ===== SENHA DE ACESSO ===== */
-  const PASSWORD = 'areiaadmin';
+const SENHA_CORRETA = "areiaadmin";
 
-  function unlockPortal(event) {
-    event.preventDefault();
-    const input = document.getElementById('access-password');
-    const error = document.getElementById('lock-error');
-
-    if (input.value === PASSWORD) {
-      document.getElementById('lock-screen').style.display = 'none';
-      document.getElementById('portal').style.display = 'block';
-    } else {
-      error.textContent = 'Senha incorreta. Tente novamente.';
-      input.value = '';
-      input.focus();
-    }
+function validarSenha() {
+  const valor = document.getElementById("senhaPortal").value;
+  if (valor === SENHA_CORRETA) {
+    sessionStorage.setItem("portal_auth", "ok");
+    document.getElementById("loginOverlay").style.display = "none";
+  } else {
+    document.getElementById("erroSenha").style.display = "block";
   }
+}
 
-  document.getElementById('lock-form').addEventListener('submit', unlockPortal);
-
-  /* ===== TROCA DE ABAS ===== */
-  function showSection(id, btn) {
-    document.querySelectorAll('.section').forEach(sec => sec.classList.add('hidden'));
-    document.getElementById(id).classList.remove('hidden');
-
-    document.querySelectorAll('.menu-btn').forEach(b => b.classList.remove('active'));
-    btn.classList.add('active');
-  }
+if (sessionStorage.getItem("portal_auth") === "ok") {
+  window.addEventListener("DOMContentLoaded", () => {
+    document.getElementById("loginOverlay").style.display = "none";
+  });
+}
 </script>
-
-</body>
-</html>
+<!-- FIM BLOQUEIO -->
